Fix styling of scrollbar corners when perpendicular scrollbars are shown

--- a/src/scrollbars.css
+++ b/src/scrollbars.css
@@ -35,3 +35,7 @@ html[aui-istouch="false"] ::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-t
 ::-webkit-scrollbar-track {
     background-color: transparent;
 }
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
